--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Posts about building fun and useful embedded devices for hobbyists
 #email: "example@mail.com"
 #twitter_username: "twitteruser"
 github_username: "nathancharlesjones"
-#linkedin_username: "linkedinuser"
+linkedin_username: "nathancharlesjones"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
